Projet GL/test/src/test/deca/context/valid/increment1/print-int2.deca
// Résultats : 3

// Historique :
//  cree le 05/01/2023

{
    int a;

    a = 3;
    println(a);
}