Projet GL/test/src/test/deca/context/invalid/increment3/int-while.deca
//Rule : 3.29

// Raison : Ligne 11 condition must be a boolean

// Historique : cree le 12/01/2023

{
    int a = 2;

    //Must be refused
    while(a){
        a = 3;
    }
}